--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,10 +73,13 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:29.0.4')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-messaging'
     implementation 'com.google.android.gms:play-services-auth:20.1.0'
     implementation platform('com.google.firebase:firebase-bom:29.2.1')
-
+    implementation 'com.google.code.gson:gson:2.6.2'
 
     //bio matric auth
     implementation 'androidx.biometric:biometric:1.1.0'
+
+    implementation 'info.androidhive:fontawesome:0.0.5'
 }
