--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,28 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.dataczar">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.USE_BIOMETRIC"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.USE_BIOMETRIC" />
+
+    <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS"/>
+    <uses-permission android:name="com.android.launcher.permission.WRITE_SETTINGS"/>
+    <uses-permission android:name="com.sec.android.provider.badge.permission.READ"/>
+    <uses-permission android:name="com.sec.android.provider.badge.permission.WRITE"/>
+    <uses-permission android:name="com.htc.launcher.permission.READ_SETTINGS"/>
+    <uses-permission android:name="com.htc.launcher.permission.UPDATE_SHORTCUT"/>
+    <uses-permission android:name="com.sonyericsson.home.permission.BROADCAST_BADGE"/>
+    <uses-permission android:name="com.anddoes.launcher.permission.UPDATE_COUNT"/>
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
 
     <application
+        android:name=".main.DataczarApp"
         android:allowBackup="false"
+        tools:replace="android:allowBackup"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="false"
-        android:largeHeap="true"
-        android:theme="@style/Theme.DataCzar">
-
-        <activity android:name=".main.activity.SplashScreen"
-            android:exported="true"
+        android:requestLegacyExternalStorage="true"
+        android:theme="@style/Theme.DataCzar"
+        android:usesCleartextTraffic="false">
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_channel"
+            android:value="@string/default_notification_channel_id"/>
+        <activity
+            android:name=".main.activity.SplashScreen"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|uiMode"
-            android:theme="@style/Theme.DataCzar"
-            android:screenOrientation="portrait">
+            android:exported="true"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.DataCzar">
+            <intent-filter>
+                <action android:name="com.notification" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -42,61 +66,67 @@
 
         <activity
             android:name=".main.activity.LoginActivity"
-            android:exported="false"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|uiMode"
-            android:theme="@style/Theme.DataCzar"
-            android:screenOrientation="portrait">
-        </activity>
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.DataCzar"></activity>
 
         <activity
             android:name=".main.activity.Dashboard"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|uiMode"
-            android:theme="@style/Theme.DataCzar"
             android:exported="false"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.DataCzar">
+
         </activity>
 
         <activity
             android:name=".main.activity.WebviewLP"
-            android:exported="false"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|uiMode"
-            android:theme="@style/Theme.DataCzar"
-            android:screenOrientation="portrait">
-        </activity>
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.DataCzar"></activity>
 
         <activity
             android:name=".main.activity.WebviewActivity"
-            android:exported="false"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|uiMode"
-            android:theme="@style/Theme.DataCzar"
-            android:screenOrientation="portrait">
-        </activity>
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.DataCzar"></activity>
 
         <activity
             android:name=".main.activity.SwitchProfileList"
-            android:exported="false"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|uiMode"
-            android:theme="@style/Theme.DataCzar"
-            android:screenOrientation="portrait">
-        </activity>
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.DataCzar"></activity>
 
         <activity
             android:name=".main.activity.Setting"
-            android:exported="false"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|uiMode"
-            android:theme="@style/Theme.DataCzar"
-            android:screenOrientation="portrait">
-        </activity>
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.DataCzar"></activity>
 
         <activity
             android:name=".main.activity.NotificationPreview"
-            android:exported="false"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|uiMode"
-            android:theme="@style/Theme.DataCzar"
-            android:screenOrientation="portrait">
-        </activity>
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.DataCzar"></activity>
 
 
+        <service
+            android:name=".main.utils.MyFirebaseMessagingService"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
+        <service
+            android:name=".main.utils.BadgeIntentService"
+            android:exported="false"></service>
     </application>
 
 </manifest>
